<resources>
    <string name="app_name">ToDoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item...</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="edit_item">Edit Item Below:</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="content">Content</string>
    <string name="due_date">Due Date</string>
    <string name="create_new_item">NEW</string>
    <string name="due_time">Due Time</string>
    <string name="sortByPriority">Sort By Priority</string>
    <string name="sortByDateAndTime">Sort By Due</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
