<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zekunwang.todoapp.EditItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_padding_horizontal"
        android:paddingRight="@dimen/edit_padding_horizontal"
        android:paddingTop="@dimen/edit_padding_vertical"
        android:paddingBottom="@dimen/edit_padding_vertical">

        <TextView android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editTextViewWidth"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:id="@+id/tvTitle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:id="@+id/etTitle" />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:id="@+id/cbCompleted"
        android:textColor="@color/app_dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_padding_horizontal"
        android:paddingRight="@dimen/edit_padding_horizontal"
        android:paddingTop="@dimen/edit_padding_vertical"
        android:paddingBottom="@dimen/edit_padding_vertical">

        <TextView android:id="@+id/tvDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editTextViewWidth"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:text="@string/due_date" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="pick date"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:id="@+id/btnDueDate"
            android:background="@color/btn_background_grey" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/swDate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_padding_horizontal"
        android:paddingRight="@dimen/edit_padding_horizontal"
        android:paddingTop="@dimen/edit_padding_vertical"
        android:paddingBottom="@dimen/edit_padding_vertical">

        <TextView android:id="@+id/tvDueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editTextViewWidth"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:text="@string/due_time" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="pick time"
            android:textColor="@color/app_dark_grey"
            android:onClick="showTimePickerDialog"
            android:id="@+id/btnDueTime"
            android:layout_weight="1"
            android:textSize="@dimen/edit_text_size"
            android:background="@color/btn_background_grey" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/swTime" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_padding_horizontal"
        android:paddingRight="@dimen/edit_padding_horizontal"
        android:paddingTop="@dimen/edit_padding_vertical"
        android:paddingBottom="@dimen/edit_padding_vertical">

        <TextView android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editTextViewWidth"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:text="@string/content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:inputType="textMultiLine"
            android:textSize="@dimen/edit_text_size"
            android:textColor="@color/app_dark_grey"
            android:id="@+id/etContent"
            android:layout_toEndOf="@+id/tvContent"
            android:gravity="top|left"
            android:textAlignment="gravity"
            android:background="#fffbfbfb" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_padding_horizontal"
        android:paddingRight="@dimen/edit_padding_horizontal"
        android:paddingTop="@dimen/edit_padding_vertical"
        android:paddingBottom="@dimen/edit_padding_vertical">

        <TextView android:text="@string/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editTextViewWidth"
            android:textColor="@color/app_dark_grey"
            android:textSize="@dimen/edit_text_size"
            android:id="@+id/tvPriority" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnPriority"
            android:spinnerMode="dropdown"
            android:textColor="@color/app_dark_grey"
            android:background="@color/btn_background_grey"
            android:scrollbarSize="@dimen/edit_text_size"
            android:layout_toEndOf="@+id/tvPriority"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </LinearLayout>

</LinearLayout>
